src/objects/FTE_Work_Card__c.object
<CustomObject>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>FTE Work Cards</relationshipLabel>
        <relationshipName>FTE_Work_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month_10__c</fullName>
        <label>Month 10</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_11__c</fullName>
        <label>Month 11</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_12__c</fullName>
        <label>Month 12</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unloaded_Rate_Total_Cost__c</fullName>
        <label>Unloaded Rate Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FTE Work Card</label>
    <nameField>
        <displayFormat>Work-Card-{00000}</displayFormat>
        <label>FTE Work Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FTE Work Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>